# cosmic-python-code

./: .gitignore  Dockerfile  conftest.py  flask_app.py  model.py  orm.py  pyproject.toml  repository.py  services.py  test_allocate.py  test_api.py  test_batch.py  test_batches.py  test_orm.py  test_repository.py  test_services.py
src/allocation/adapters/: orm.py  repository.py
src/allocation/domain/: model.py
src/allocation/entrypoints/: flask_app.py
src/allocation/service_layer/: services.py  unit_of_work.py
tests/e2e/: test_api.py
tests/integration/: test_orm.py  test_uow.py
tests/unit/: test_services.py
