[tool.poetry]
name = "cosmic"
version = "0.1.0"
description = ""
authors = ["Konstantin Gorbunov <konstunn@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.7"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pytest-notifier = "^1.0.4"
black = "^23.1.0"
ipython = "^8.11.0"
ipdb = "^0.13.13"
prompt-toolkit = "^3.0.38"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
